<resources>
    <string name="app_name">MovieCatalog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview_title">Overview</string>
    <string name="lorem_text">Lorem ipsum dolor amet</string>
    <string name="score_title">Score</string>
    <string name="budget_title">Budget</string>
    <string name="language_title">Bahasa</string>
    <string name="status_title">Status</string>
    <string name="length_title">Durasi</string>
    <string name="detail_title">Detail</string>
    <string name="bookmark">Bookmark</string>
    <string name="daftar_favorite">Daftar Favorite</string>
    <string name="dari_a">Dari A</string>
    <string name="dari_z">Dari Z</string>
    <string name="random">Random</string>
</resources>