<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.movie.DetailMovieActivity">
    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shimmer_colored="true"
        app:shimmer_base_color="@color/black"
        android:id="@+id/shimmer_view_container">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/imgPoster"
                tools:src="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Movie Title"
                android:id="@+id/title"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imgPoster"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="24dp"
                android:background="@color/teal_200"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/overview_title"
                app:layout_constraintTop_toBottomOf="@id/imgPoster"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/overview_title"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/overview_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:id="@+id/overview"
                tools:text="@tools:sample/lorem/random"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/detail_title"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview"
                />

            <TextView
                android:id="@+id/length_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/length_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_title"/>

            <TextView
                android:id="@+id/status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:textStyle="bold"
                android:text="@string/status_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/length_title" />

            <TextView
                android:id="@+id/language_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/language_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_title" />

            <TextView
                android:id="@+id/budget_title"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/budget_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_title" />

            <TextView
                android:id="@+id/score_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/score_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/budget_title" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="status_title,length_title, language_title, budget_title, score_title"
                android:layout_marginStart="24dp"
                />

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="@string/lorem_text"
                app:layout_constraintStart_toEndOf="@+id/barrier7"
                app:layout_constraintTop_toTopOf="@id/status_title" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="@string/lorem_text"
                app:layout_constraintStart_toEndOf="@+id/barrier7"
                app:layout_constraintTop_toTopOf="@id/length_title" />
            <TextView
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="@string/lorem_text"
                app:layout_constraintStart_toEndOf="@+id/barrier7"
                app:layout_constraintTop_toTopOf="@id/language_title" />
            <TextView
                android:id="@+id/budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="@string/lorem_text"
                app:layout_constraintStart_toEndOf="@+id/barrier7"
                app:layout_constraintTop_toTopOf="@id/budget_title" />

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                tools:text="@string/lorem_text"
                app:layout_constraintStart_toEndOf="@+id/barrier7"
                app:layout_constraintTop_toTopOf="@id/score_title" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</ScrollView>